Corrected styling for now collapsed section-story

--- a/css/less/components/sections.less
+++ b/css/less/components/sections.less
@@ -95,8 +95,10 @@ section{
    .img-cover();
 }
 .section-story{
+   min-height: initial; //override
    .text-white();
    h1{
+      margin-top: 0;
       margin-bottom: 0;
    }
    h2,
